# lemon_communicator

./: Cargo.toml  Copy of api_description.drawio  LemonComm.drawio  README.md  Untitled Diagram.drawio  api_description.drawio  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  rust.rs  server-client_api.drawio
client_app_linux/: build.sh  imgui.ini  makefile
client_app_linux/scripts/: build.sh  run.sh
client_app_linux/src/: lemon_client.c  lemon_ctx.c  lemon_gui.cpp  main.c  main.cpp  utils.c
client_app_linux/src/includes/: lemon_ctx.h  lemon_gui.h  utils.h
client_app_linux/ui/: lemon_comm_linux.cmb  linux_client.ui
libs/api/: parser.cpp
libs/api/includes/: parser.hpp
libs/api/tests/: test.cpp
models/: basics.xml  database.sql
models/test_requests/: ping.xml
server_linux/includes/: client.h  database.h  requests.hpp  server.h
server_linux/scripts/: build.sh  run.sh
server_linux/src/: client.c  database.c  main.c  main.cpp  requests.cpp
server_linux/src/tests/: client_test.c
server_linux/tests/: db_conn.c
src/: command_args.rs  main.rs  myio.rs  peer.rs
src/comms/: client.rs  input.rs  meta_data.rs  mod.rs  output.rs  peer_data.rs  responses.rs
src/comms/client/: client_handler.rs  client_reqs.rs  mod.rs
src/comms/network/: api.rs  mod.rs
xml_models/: basics.xml
