[package]
name = "lemon_communicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.32.0", features=["full"]}
clap = { version="4.4.6",  features=["derive"]}
regex = "1.9.6"
lazy_static = "1.4.0"
bytemuck = "1.14.0"